--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,36 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@font-face {
+  font-family: 'UTM Avo';
+  src: url('./assets/fonts/UTM Avo.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face {
+  font-family: 'UTM Avo';
+  src: url('./assets/fonts/UTM AvoItalic.ttf') format('truetype');
+  font-weight: 400;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'UTM Avo';
+  src: url('./assets/fonts/UTM AvoBold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'UTM Avo';
+  src: url('./assets/fonts/UTM AvoBold_Italic.ttf') format('truetype');
+  font-weight: 700;
+  font-style: italic;
+}
+
+/* Set mặc định */
+body {
+  font-family: 'UTM Avo', sans-serif;
 }
